--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-calendar": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-loader-spinner": "^5.1.2",
@@ -23,7 +24,6 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
